--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,9 @@
+server.port=8080
+
+spring.cache.type=redis
+spring.redis.host=localhost
+spring.redis.port=6379
+
 spring.datasource.url=jdbc:h2:mem:db_aluguelCarros
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
